# amaterus_create_download_video_lambda

./: Dockerfile  README.md  lambda_function.py  pyproject.toml
.github/workflows/: build-docker.yml
