[tool.poetry]
package-mode = false
name = "amaterus-enqueue-download-video-lambda"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"


[tool.poetry.group.dev.dependencies]
pysen = "^0.11.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
mypy = "^1.10.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
